2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (12): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strdup_printf(e1, e2, ..., NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (15): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strconcat(e1, e2, ..., NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (14): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strconcat(e1, e2, NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (14): Get rid of newvstrallocf()
	* common-src/amanda.h, common-src/alloc.c: remove macro, prototypes,
	  implementation

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (20): Get rid of newvstralloc()
	* common-src/amanda.h, common-src/alloc.c: remove macro, prototypes,
	  implementation

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (6): Get rid of newstralloc2()
	* common-src/amanda.h: remove macro

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (28): Get rid of stralloc2()
	* common-src/amanda.h: remove macro

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (30): Get rid of newstralloc()
	* common-src/alloc.c, common-src/amanda.h: remove macros, prototypes,
	  implementation

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/getfsent.c: remove dev2rdev() and remnant artifacts in
	  search_fstab() and samefile()
	* common-src/genversion.c, installcheck/catalogs/chunker-partial.cat:
	  remove RDEV_PREFIX references
        * config/amanda/devprefix.m4: remove RDEV_PREFIX detection

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: use execute_on_to_string() in
	  val_t_display_strs()

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: use execute_on_to_string() in
	  val_t_display_strs()
