@@ -1,4 +1,8 @@
 2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
+	* client-src/sendbackup-dump.c: fix compile error due to undeclared
+	  tmpbuf, remove tmpbuf entirely
+
+2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
         * Many files (12): remove unndeeded uses of the temporary variable
 	  tmpbuf in the g_strdup_printf(e1, e2, ..., NULL) case
 
